--- a/index.html
+++ b/index.html
@@ -782,7 +782,7 @@
     					</div>
    						<div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
       						<div class="panel-body">
-        						<p>We like to think of hackathons as “invention marathons.” You (the hacker) will spend 36 hours building projects (hacks) in teams of 1 - 4 people. Come with an idea, and we’ll provide everything you need to turn that idea into reality — hardware, mentors, food, you name it. There is also a Code of Conduct. <a href="http://mlh.io/code-of-conduct">Check it out here.</a></p>
+        						<p>We like to think of hackathons as “invention marathons.” You (the hacker) will spend 36 hours building projects (hacks) in teams of 1 - 4 people. Come with an idea, and we’ll provide everything you need to turn that idea into reality — hardware, mentors, food, you name it.</p>
       						</div>
    						 </div>
  					</div>
@@ -914,13 +914,13 @@
 						    						<div class="panel-heading" role="tab" id="headingTen">
 						       						<h4 class="panel-title">
 						         						<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTen" aria-expanded="false" aria-controls="collapseTen">
-						           							What should I bring?
+						           							Will there be prizes?
 						         						</a>
 						       						</h4>
 						     					</div>
 						    						<div id="collapseTen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTen">
 						       						<div class="panel-body">
-						                             	<p>Bring a student ID, laptop + charger, and personal items (clothing, hygiene products, etc.)</p>
+						                             	<p>Of course! With over $10,000 in prizes, you'll have the opportunity to compete in a variety of challenges for a chance to win a iPads, GoPros, DJI Drones, Xbox Ones, and much more. We'll also have prizes for various events throughout the weekend! You can view an up to date prize list on our <a href="https://pickhacks.devpost.com/">DevPost</a></p>
 						       						</div>
 						    						 </div>
 						  					 </div>
