--- a/index.html
+++ b/index.html
@@ -920,7 +920,7 @@
 						     					</div>
 						    						<div id="collapseTen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTen">
 						       						<div class="panel-body">
-						                             	<p>Of course! With over $10,000 in prizes, you'll have the opportunity to compete in a variety of challenges for a chance to win a iPads, GoPros, DJI Drones, Xbox Ones, and much more. We'll also have prizes for various events throughout the weekend! You can view an up to date prize list on our <a href="https://pickhacks.devpost.com/">DevPost</a></p>
+						                             	<p>Of course! With over $10,000 in prizes, you'll have the opportunity to compete in a variety of challenges for a chance to win iPads, GoPros, DJI Drones, Xbox Ones, and much more. We'll also have prizes for various events throughout the weekend! You can view an up to date prize list on our <a href="https://pickhacks.devpost.com/">DevPost.</a></p>
 						       						</div>
 						    						 </div>
 						  					 </div>
