--- a/index.html
+++ b/index.html
@@ -1169,6 +1169,11 @@
 					<img src="images/info.png" />
 				</div>
 			</a>
+			<a href="https://library.mst.edu" target="_blank">
+				<div class="image-container lib">
+					<img src="images/library.png" />
+				</div>
+			</a>
 		</div>
 
 	</div>
