More logos part 278

--- a/index.html
+++ b/index.html
@@ -1073,6 +1073,21 @@
 						<img src="images/linode.png" />
 					</div>
 				</a>
+				<a href="#" target="_blank">
+					<div class="image-container allscripts">
+						<img src="images/allscripts.png" />
+					</div>
+				</a>
+				<a href="#" target="_blank">
+					<div class="image-container accenture">
+						<img src="images/accenture.png" />
+					</div>
+				</a>
+				<a href="#" target="_blank">
+					<div class="image-container att">
+						<img src="images/att.png" />
+					</div>
+				</a>
 				<a href="https://jobs.monsanto.com/" target="_blank">
 					<div class="image-container bayer">
 						<img src="images/bayer.png" />
@@ -1149,29 +1164,14 @@
 					<img src="images/mule.png" />
 				</div>
 			</a>
-			<a href="https://cec.mst.edu/" target="_blank">
-				<div class="image-container eng">
-					<img src="images/eng.png" />
+			<a href="#" target="_blank">
+				<div class="image-container js">
+					<img src="images/jumpstart.png" />
 				</div>
 			</a>
-			<a href="http://cs.mst.edu/" target="_blank">
-				<div class="image-container cs">
-					<img src="images/cs.png" />
-				</div>
-			</a>
-			<a href="https://casb.mst.edu/" target="_blank">
-				<div class="image-container coab">
-					<img src="images/coab.png" />
-				</div>
-			</a>
-			<a href="https://it.mst.edu/" target="_blank">
-				<div class="image-container it">
-					<img src="images/info.png" />
-				</div>
-			</a>
-			<a href="https://library.mst.edu" target="_blank">
-				<div class="image-container lib">
-					<img src="images/library.png" />
+			<a href="https://www.mst.edu" target="_blank">
+				<div class="image-container sandt">
+					<img src="images/sandt.png" />
 				</div>
 			</a>
 		</div>
