Logo update (uhh..) who knows

--- a/index.html
+++ b/index.html
@@ -1073,19 +1073,34 @@
 						<img src="images/linode.png" />
 					</div>
 				</a>
-				<a href="#" target="_blank">
+				<a href="https://www.allscripts.com/allscripts-com/careers" target="_blank">
 					<div class="image-container allscripts">
 						<img src="images/allscripts.png" />
 					</div>
 				</a>
-				<a href="#" target="_blank">
+				<a href="https://www.accenture.com/us-en/careers/students-graduates" target="_blank">
 					<div class="image-container accenture">
 						<img src="images/accenture.png" />
 					</div>
 				</a>
-				<a href="#" target="_blank">
+				<a href="https://att.jobs/college" target="_blank">
 					<div class="image-container att">
 						<img src="images/att.png" />
+					</div>
+				</a>
+				<a href="http://www.sandia.gov/careers/" target="_blank">
+					<div class="image-container sandia">
+						<img src="images/sandia.png" />
+					</div>
+				</a>
+				<a href="http://www.statefarm.com/careers" target="_blank">
+					<div class="image-container state">
+						<img src="images/state.png" />
+					</div>
+				</a>
+				<a href="https://oasisdigital.com/" target="_blank">
+					<div class="image-container oasis">
+						<img src="images/oasis.png" />
 					</div>
 				</a>
 				<a href="https://jobs.monsanto.com/" target="_blank">
@@ -1093,7 +1108,12 @@
 						<img src="images/bayer.png" />
 					</div>
 				</a>
-				<a href="#" target="_blank">
+				<a href="http://ungerboeck.com" taget="_blank">
+					<div class="image-container unger">
+						<img src="images/unger.png" />
+					</div>
+				</a>
+				<a href="https://www.mlb.com/cardinals" target="_blank">
 					<div class="image-container cards">
 						<img src="images/cards.png" />
 					</div>
@@ -1164,7 +1184,7 @@
 					<img src="images/mule.png" />
 				</div>
 			</a>
-			<a href="#" target="_blank">
+			<a href="https://jumpstart.me/r/pickhacks" target="_blank">
 				<div class="image-container js">
 					<img src="images/jumpstart.png" />
 				</div>
