1 venue to 15000 in prizes and 20+ companies

--- a/index.html
+++ b/index.html
@@ -119,12 +119,12 @@
 		<div class="stat">
 			<div class="number">
 				<p>
-					1
+					$15000+
 				</p>
 			</div>
 			<div class="word">
 				<p>
-					Venue
+					in Prizes
 				</p>
 			</div>
 		</div>
@@ -143,7 +143,7 @@
 		<div class="stat">
 			<div class="number">
 				<p>
-					15+
+					20+
 				</p>
 			</div>
 			<div class="word">
