--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 		              <tr>
 		                <td>7.00 - 10.00 PM</td>
 		                <td>Dinner</td>
-		                <td>Upstairs Atrium</td>
+		                <td>Downstairs Atrium</td>
 		              </tr>
 									<tr>
 		                <td>8.00 PM</td>
@@ -288,7 +288,7 @@
 		              <tr>
 		                <td>12.00 - 2.00 AM</td>
 		                <td>Midnight Snack</td>
-		                <td>Upstairs Atrium</td>
+		                <td>Downstairs Atrium</td>
 		              </tr>
 		              <tr>
 		                <td>2.00 - 4.00 AM</td>
@@ -298,7 +298,7 @@
 		              <tr>
 		                <td>8.00 - 10.00 AM</td>
 		                <td>Breakfast sponsored by Tradebot</td>
-		                <td>Upstairs Atrium</td>
+		                <td>Downstairs Atrium</td>
 		              </tr>
 		              <tr>
 		                <td>10.00 - 10.45 AM</td>
@@ -313,7 +313,7 @@
 									<tr>
 		                <td>12.00 - 2.00 PM</td>
 		                <td>Lunch sponsored by Centene</td>
-		                <td>Upstairs Atrium</td>
+		                <td>Downstairs Atrium</td>
 		              </tr>
 									<tr>
 		                <td>2.00 - 5.00 PM</td>
@@ -328,7 +328,7 @@
 									<tr>
 		                <td>6.00 - 9.00 PM</td>
 		                <td>Dinner</td>
-		                <td>Upstairs Atrium</td>
+		                <td>Downstairs Atrium</td>
 		              </tr>
 									<tr>
 										<td>10.00 - 11.00 PM</td>
@@ -354,12 +354,12 @@
 		              <tr>
 		                <td>12.00 - 2.00 AM</td>
 		                <td>Midnight Snack</td>
-		                <td>Upstairs Atrium</td>
+		                <td>Downstairs Atrium</td>
 		              </tr>
 		              <tr>
 		                <td>07.00 - 9.00 AM</td>
 		                <td>Breakfast</td>
-		                <td>Upstairs Atrium</td>
+		                <td>Downstairs Atrium</td>
 		              </tr>
 		              <tr>
 		                <td>08.00 AM</td>
@@ -389,7 +389,7 @@
 									<tr>
 		                <td>1.45 PM - 2.30 PM</td>
 		                <td>Lunch sponsored by State Farm</td>
-		                <td>Upstairs Atrium</td>
+		                <td>Downstairs Atrium</td>
 		              </tr>
 									<tr>
 		                <td>03.00 PM</td>
