--- a/index.html
+++ b/index.html
@@ -225,37 +225,37 @@
 		                <td>Relaxation Area</td>
 		              </tr>
 		              <tr>
-		                <td>04.00 - 11.00 PM</td>
+		                <td>4.00 - 11.00 PM</td>
 		                <td>Check In</td>
 		                <td>Relaxation Area</td>
 		              </tr>
 									<tr>
-		                <td>04.30 - 05.30 PM</td>
+		                <td>4.30 - 5.30 PM</td>
 		                <td>Buses Arrive</td>
 		                <td>Parking Lot</td>
 		              </tr>
 									<tr>
-		                <td>06.00 - 07.00 PM</td>
+		                <td>6.00 - 7.00 PM</td>
 		                <td>Opening Ceremony</td>
 		                <td>St. Pat's Ballroom A&B</td>
 		              </tr>
 		              <tr>
-		                <td>07.00 - 10.00 PM</td>
+		                <td>7.00 - 10.00 PM</td>
 		                <td>Dinner</td>
 		                <td>Downstairs Atrium</td>
 		              </tr>
 									<tr>
-		                <td>08.00 PM</td>
+		                <td>8.00 PM</td>
 		                <td>Hacking Begins</td>
 		                <td>Hacker Rooms</td>
 		              </tr>
 		              <tr>
-		                <td>08.00 - 08.30 PM</td>
+		                <td>8.00 - 8.30 PM</td>
 		                <td>Team Building</td>
 		                <td>St. Pat's Ballroom A&B</td>
 		              </tr>
 									<tr>
-		                <td>09.00 - 09.50 PM</td>
+		                <td>9.00 - 9.50 PM</td>
 		                <td>Intro to Web Dev</td>
 		                <td>St. Pat's Ballroom A&B</td>
 		              </tr>
@@ -265,7 +265,7 @@
 		                <td>St. Pat's Ballroom A&B</td>
 		              </tr>
 									<tr>
-		                <td>11.00 PM - 01.00 AM</td>
+		                <td>11.00 PM - 1.00 AM</td>
 		                <td>Laser Tag</td>
 		                <td>Havener Lawn</td>
 		              </tr>
@@ -286,17 +286,17 @@
 		            </thead>
 		            <tbody>
 		              <tr>
-		                <td>12.00 - 02.00 AM</td>
+		                <td>12.00 - 2.00 AM</td>
 		                <td>Midnight Snack</td>
 		                <td>Downstairs Atrium</td>
 		              </tr>
 		              <tr>
-		                <td>02.00 - 04.00 AM</td>
+		                <td>2.00 - 4.00 AM</td>
 		                <td>Smash Tournament</td>
 		                <td>St. Pat's Ballroom A&B</td>
 		              </tr>
 		              <tr>
-		                <td>08.00 - 10.00 AM</td>
+		                <td>8.00 - 10.00 AM</td>
 		                <td>Breakfast sponsored by Tradebot</td>
 		                <td>Downstairs Atrium</td>
 		              </tr>
@@ -311,22 +311,22 @@
 		                <td>St. Pat's Ballroom A&B</td>
 		              </tr>
 									<tr>
-		                <td>12.00 - 02.00 PM</td>
+		                <td>12.00 - 2.00 PM</td>
 		                <td>Lunch sponsored by Centene</td>
 		                <td>Downstairs Atrium</td>
 		              </tr>
 									<tr>
-		                <td>02.00 - 05.00 PM</td>
+		                <td>2.00 - 5.00 PM</td>
 		                <td>Rock Climbing</td>
 		                <td>Havener Lawn</td>
 		              </tr>
 									<tr>
-		                <td>05.00 - 06.00 PM</td>
+		                <td>5.00 - 6.00 PM</td>
 		                <td>Afternoon Yoga</td>
 		                <td>Downstairs Atrium</td>
 		              </tr>
 									<tr>
-		                <td>06.00 - 09.00 PM</td>
+		                <td>6.00 - 9.00 PM</td>
 		                <td>Dinner</td>
 		                <td>Downstairs Atrium</td>
 		              </tr>
@@ -352,27 +352,27 @@
 		            </thead>
 		            <tbody>
 		              <tr>
-		                <td>12.00 - 02.00 AM</td>
+		                <td>12.00 - 2.00 AM</td>
 		                <td>Midnight Snack</td>
 		                <td>Downstairs Atrium</td>
 		              </tr>
 		              <tr>
-		                <td>07.00 - 09.00 AM</td>
+		                <td>7.00 - 9.00 AM</td>
 		                <td>Breakfast</td>
 		                <td>Downstairs Atrium</td>
 		              </tr>
 		              <tr>
-		                <td>08.00 AM</td>
+		                <td>8.00 AM</td>
 		                <td>Hacking Ends</td>
 		                <td>Hacker Rooms</td>
 		              </tr>
 									<tr>
-		                <td>08.00 AM - 10.00 PM</td>
+		                <td>8.00 AM - 10.00 PM</td>
 		                <td>Puppies</td>
 		                <td>Havener Lawn</td>
 		              </tr>
 									<tr>
-		                <td>09.00 - 09.30 AM</td>
+		                <td>9.00 - 9.30 AM</td>
 		                <td>How to Demo Workshop</td>
 		                <td>St. Pat's Ballroom A&B</td>
 		              </tr>
@@ -382,17 +382,17 @@
 		                <td>Hacker Rooms</td>
 		              </tr>
 									<tr>
-		                <td>01.00 PM - 01.45 PM</td>
+		                <td>1.00 PM - 1.45 PM</td>
 		                <td>Closing Ceremony</td>
 		                <td>St. Pat's Ballroom A&B</td>
 		              </tr>
 									<tr>
-		                <td>01.45 PM - 02.30 PM</td>
+		                <td>1.45 PM - 2.30 PM</td>
 		                <td>Lunch sponsored by State Farm</td>
 		                <td>Downstairs Atrium</td>
 		              </tr>
 									<tr>
-		                <td>03.00 PM</td>
+		                <td>3.00 PM</td>
 		                <td>Buses Leave</td>
 		                <td>Parking Lot</td>
 		              </tr>
@@ -440,37 +440,37 @@
 									<td>Relaxation Area</td>
 								</tr>
 								<tr>
-									<td>04.00 - 11.00 PM</td>
+									<td>4.00 - 11.00 PM</td>
 									<td>Check In</td>
 									<td>Relaxation Area</td>
 								</tr>
 								<tr>
-									<td>04.30 - 05.30 PM</td>
+									<td>4.30 - 5.30 PM</td>
 									<td>Buses Arrive</td>
 									<td>Parking Lot</td>
 								</tr>
 								<tr>
-									<td>06.00 - 07.00 PM</td>
+									<td>6.00 - 7.00 PM</td>
 									<td>Opening Ceremony</td>
 									<td>St. Pat's Ballroom A&B</td>
 								</tr>
 								<tr>
-									<td>07.00 - 10.00 PM</td>
+									<td>7.00 - 10.00 PM</td>
 									<td>Dinner</td>
 									<td>Downstairs Atrium</td>
 								</tr>
 								<tr>
-									<td>08.00 PM</td>
+									<td>8.00 PM</td>
 									<td>Hacking Begins</td>
 									<td>Hacker Rooms</td>
 								</tr>
 								<tr>
-									<td>08.00 - 08.30 PM</td>
+									<td>8.00 - 8.30 PM</td>
 									<td>Team Building</td>
 									<td>St. Pat's Ballroom A&B</td>
 								</tr>
 								<tr>
-									<td>09.00 - 09.50 PM</td>
+									<td>9.00 - 9.50 PM</td>
 									<td>Intro to Web Dev</td>
 									<td>St. Pat's Ballroom A&B</td>
 								</tr>
@@ -480,7 +480,7 @@
 									<td>St. Pat's Ballroom A&B</td>
 								</tr>
 								<tr>
-									<td>11.00 PM - 01.00 AM</td>
+									<td>11.00 PM - 1.00 AM</td>
 									<td>Laser Tag</td>
 									<td>Havener Lawn</td>
 								</tr>
@@ -501,17 +501,17 @@
 							</thead>
 							<tbody>
 								<tr>
-									<td>12.00 - 02.00 AM</td>
+									<td>12.00 - 2.00 AM</td>
 									<td>Midnight Snack</td>
 									<td>Downstairs Atrium</td>
 								</tr>
 								<tr>
-									<td>02.00 - 04.00 AM</td>
+									<td>2.00 - 4.00 AM</td>
 									<td>Smash Tournament</td>
 									<td>St. Pat's Ballroom A&B</td>
 								</tr>
 								<tr>
-									<td>08.00 - 10.00 AM</td>
+									<td>8.00 - 10.00 AM</td>
 									<td>Breakfast sponsored by Tradebot</td>
 									<td>Downstairs Atrium</td>
 								</tr>
@@ -526,22 +526,22 @@
 									<td>St. Pat's Ballroom A&B</td>
 								</tr>
 								<tr>
-									<td>12.00 - 02.00 PM</td>
+									<td>12.00 - 2.00 PM</td>
 									<td>Lunch sponsored by Centene</td>
 									<td>Downstairs Atrium</td>
 								</tr>
 								<tr>
-									<td>02.00 - 05.00 PM</td>
+									<td>2.00 - 5.00 PM</td>
 									<td>Rock Climbing</td>
 									<td>Havener Lawn</td>
 								</tr>
 								<tr>
-									<td>05.00 - 06.00 PM</td>
+									<td>5.00 - 6.00 PM</td>
 									<td>Afternoon Yoga</td>
 									<td>Downstairs Atrium</td>
 								</tr>
 								<tr>
-									<td>06.00 - 09.00 PM</td>
+									<td>6.00 - 9.00 PM</td>
 									<td>Dinner</td>
 									<td>Downstairs Atrium</td>
 								</tr>
@@ -567,27 +567,27 @@
 							</thead>
 							<tbody>
 								<tr>
-									<td>12.00 - 02.00 AM</td>
+									<td>12.00 - 2.00 AM</td>
 									<td>Midnight Snack</td>
 									<td>Downstairs Atrium</td>
 								</tr>
 								<tr>
-									<td>07.00 - 09.00 AM</td>
+									<td>7.00 - 9.00 AM</td>
 									<td>Breakfast</td>
 									<td>Downstairs Atrium</td>
 								</tr>
 								<tr>
-									<td>08.00 AM</td>
+									<td>8.00 AM</td>
 									<td>Hacking Ends</td>
 									<td>Hacker Rooms</td>
 								</tr>
 								<tr>
-									<td>08.00 AM - 10.00 PM</td>
+									<td>8.00 AM - 10.00 PM</td>
 									<td>Puppies</td>
 									<td>Havener Lawn</td>
 								</tr>
 								<tr>
-									<td>09.00 - 09.30 AM</td>
+									<td>9.00 - 9.30 AM</td>
 									<td>How to Demo Workshop</td>
 									<td>St. Pat's Ballroom A&B</td>
 								</tr>
@@ -597,17 +597,17 @@
 									<td>Hacker Rooms</td>
 								</tr>
 								<tr>
-									<td>01.00 PM - 01.45 PM</td>
+									<td>1.00 PM - 1.45 PM</td>
 									<td>Closing Ceremony</td>
 									<td>St. Pat's Ballroom A&B</td>
 								</tr>
 								<tr>
-									<td>01.45 PM - 02.30 PM</td>
+									<td>1.45 PM - 2.30 PM</td>
 									<td>Lunch sponsored by State Farm</td>
 									<td>Downstairs Atrium</td>
 								</tr>
 								<tr>
-									<td>03.00 PM</td>
+									<td>3.00 PM</td>
 									<td>Buses Leave</td>
 									<td>Parking Lot</td>
 								</tr>
@@ -1177,6 +1177,11 @@
 			<a href="https://jumpstart.me/r/pickhacks" target="_blank">
 				<div class="image-container js">
 					<img src="images/jumpstart.png" />
+				</div>
+			</a>
+			<a href="http://www.sportradar.us/?utm_source=pick-hacks&utm_medium=referral&utm_campaign=hackathon" target="_blank">
+				<div class="image-container sport">
+					<img src="images/sportradar.png" />
 				</div>
 			</a>
 			<a href="https://www.mst.edu" target="_blank">
