--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 		</div>
 		<div class="details-text showDesktop">
 			<div class="section-title showDesktop">
-				<h2>Details</h2>
+				<h2>Schedule</h2>
 			</div>
 			<!-- <p class="showDesktop">
 				Coming soon..
@@ -1002,6 +1002,14 @@
 				</a>
 			</div>
 
+			<div class="industry-mid">
+				<a href="https://careers.enterprise.com/information-technology">
+					<div class="image-container enterprise">
+						<img src="images/enterprise.png">
+					</div>
+				</a>
+			</div>
+
 			<div class="industry-other">
 				<a href="http://careers.edwardjones.com/index.html" target="_blank">
 					<div class="image-container edward">
@@ -1096,11 +1104,6 @@
 				<a href="https://jobs.monsanto.com/" target="_blank">
 					<div class="image-container bayer">
 						<img src="images/bayer.png" />
-					</div>
-				</a>
-				<a href="http://ungerboeck.com" taget="_blank">
-					<div class="image-container unger">
-						<img src="images/unger.png" />
 					</div>
 				</a>
 				<a href="https://www.mlb.com/cardinals" target="_blank">
