--- a/index.html
+++ b/index.html
@@ -1047,8 +1047,8 @@
 					</div>
 				</a>
 				<a href="https://up.jobs/index.htm" target="_blank">
-					<div class="image-container union">
-						<img src="images/up_logo.png" />
+					<div class="image-container slalom">
+						<img src="images/slalom.png" />
 					</div>
 				</a>
 				<a href="https://softwaredesignpartners.com/" target="_blank">
@@ -1104,6 +1104,11 @@
 				<a href="https://jobs.monsanto.com/" target="_blank">
 					<div class="image-container bayer">
 						<img src="images/bayer.png" />
+					</div>
+				</a>
+				<a href="https://jobs.monsanto.com/" target="_blank">
+					<div class="image-container union">
+						<img src="images/up_logo.png" />
 					</div>
 				</a>
 				<a href="https://www.mlb.com/cardinals" target="_blank">
