--- a/index.html
+++ b/index.html
@@ -1046,7 +1046,7 @@
 						<img src="images/rrlogo.png" />
 					</div>
 				</a>
-				<a href="https://up.jobs/index.htm" target="_blank">
+				<a href="#" target="_blank">
 					<div class="image-container slalom">
 						<img src="images/slalom.png" />
 					</div>
