--- a/index.html
+++ b/index.html
@@ -1111,14 +1111,19 @@
 						<img src="images/oasis.png" />
 					</div>
 				</a>
-				<a href="https://jobs.monsanto.com/" target="_blank">
-					<div class="image-container bayer">
-						<img src="images/bayer.png" />
+				<a href="#" target="_blank">
+					<div class="image-container tyson">
+						<img src="images/tyson.png" />
 					</div>
 				</a>
 				<a href="https://jobs.monsanto.com/" target="_blank">
 					<div class="image-container union">
 						<img src="images/up_logo.png" />
+					</div>
+				</a>
+				<a href="https://jobs.monsanto.com/" target="_blank">
+					<div class="image-container bayer">
+						<img src="images/bayer.png" />
 					</div>
 				</a>
 				<a href="https://www.mlb.com/cardinals" target="_blank">
