--- a/index.html
+++ b/index.html
@@ -227,12 +227,12 @@
 		              <tr>
 		                <td>4.00 - 11.00 PM</td>
 		                <td>Check In</td>
-		                <td>Relaxation Area</td>
+		                <td>Staircase</td>
 		              </tr>
 									<tr>
 		                <td>4.30 - 5.30 PM</td>
 		                <td>Buses Arrive</td>
-		                <td>Parking Lot</td>
+		                <td>State Street</td>
 		              </tr>
 									<tr>
 		                <td>6.00 - 7.30 PM</td>
@@ -256,18 +256,18 @@
 		              </tr>
 									<tr>
 		                <td>9.00 - 9.50 PM</td>
-		                <td>Intro to Hackathons</td>
+		                <td>"Intro to Hackathons" by MLH</td>
 		                <td>St. Pat's Ballroom A&B</td>
 		              </tr>
 									<tr>
 		                <td>10.00 - 10.50 PM</td>
-		                <td>Intro to Web Dev</td>
+		                <td>"Intro to Web Dev" by ACM</td>
 		                <td>St. Pat's Ballroom A&B</td>
 		              </tr>
 									<tr>
 		                <td>11.00 PM - 1.00 AM</td>
-		                <td>Laser Tag</td>
-		                <td>Havener Lawn</td>
+		                <td>Musical Chairs</td>
+		                <td>Downstairs Atrium</td>
 		              </tr>
 		            </tbody>
 		        	</table>
@@ -302,17 +302,17 @@
 		              </tr>
 		              <tr>
 		                <td>10.00 - 10.50 AM</td>
-		                <td>Panera Slot</td>
+		                <td>"Developing Software in an Agile World" by Express Scripts</td>
 		                <td>St. Pat's Ballroom A&B</td>
 		              </tr>
 									<tr>
 		                <td>11.00 - 11.50 AM</td>
-		                <td>Express Scripts Slot</td>
+		                <td>"Amazon Alexa Skills" by Panera Bread</td>
 		                <td>St. Pat's Ballroom A&B</td>
 		              </tr>
 									<tr>
 		                <td>12.00 - 2.00 PM</td>
-		                <td>Lunch sponsored by Centene</td>
+		                <td>Lunch sponsored by Centene Corporation</td>
 		                <td>Downstairs Atrium</td>
 		              </tr>
 									<tr>
@@ -323,7 +323,7 @@
 									<tr>
 		                <td>2.00 - 5.00 PM</td>
 		                <td>Rock Climbing</td>
-		                <td>Lawn</td>
+		                <td>Havener Lawn</td>
 		              </tr>
 									<tr>
 		                <td>5.00 - 6.00 PM</td>
@@ -339,6 +339,11 @@
 										<td>9.00 - 10.00 PM</td>
 										<td>Cup Stacking</td>
 										<td>Downstairs Atrium</td>
+									</tr>
+									<tr>
+										<td>11.00 PM - 12.00 AM</td>
+										<td>Reiumbursement Open House</td>
+										<td>Staircase</td>
 									</tr>
 		            </tbody>
 		        	</table>
@@ -392,7 +397,7 @@
 		                <td>Downstairs Atrium</td>
 		              </tr>
 									<tr>
-		                <td>1.00 PM - 1.45 PM</td>
+		                <td>1.00 PM - 2.30 PM</td>
 		                <td>Closing Ceremony</td>
 		                <td>St. Pat's Ballroom A&B</td>
 		              </tr>
@@ -447,12 +452,12 @@
 								 <tr>
 									 <td>4.00 - 11.00 PM</td>
 									 <td>Check In</td>
-									 <td>Relaxation Area</td>
+									 <td>Staircase</td>
 								 </tr>
 								 <tr>
 									 <td>4.30 - 5.30 PM</td>
 									 <td>Buses Arrive</td>
-									 <td>Parking Lot</td>
+									 <td>State Street</td>
 								 </tr>
 								 <tr>
 									 <td>6.00 - 7.30 PM</td>
@@ -476,18 +481,18 @@
 								 </tr>
 								 <tr>
 									 <td>9.00 - 9.50 PM</td>
-									 <td>Intro to Hackathons</td>
+									 <td>"Intro to Hackathons" by MLH</td>
 									 <td>St. Pat's Ballroom A&B</td>
 								 </tr>
 								 <tr>
 									 <td>10.00 - 10.50 PM</td>
-									 <td>Intro to Web Dev</td>
+									 <td>"Intro to Web Dev" by ACM</td>
 									 <td>St. Pat's Ballroom A&B</td>
 								 </tr>
 								 <tr>
 									 <td>11.00 PM - 1.00 AM</td>
-									 <td>Laser Tag</td>
-									 <td>Havener Lawn</td>
+									 <td>Musical Chairs</td>
+									 <td>Downstairs Atrium</td>
 								 </tr>
 							 </tbody>
 						 </table>
@@ -522,17 +527,17 @@
 								 </tr>
 								 <tr>
 									 <td>10.00 - 10.50 AM</td>
-									 <td>Panera Slot</td>
+									 <td>"Developing Software in an Agile World" by Express Scripts</td>
 									 <td>St. Pat's Ballroom A&B</td>
 								 </tr>
 								 <tr>
 									 <td>11.00 - 11.50 AM</td>
-									 <td>Express Scripts Slot</td>
+									 <td>"Amazon Alexa Skills" by Panera Bread</td>
 									 <td>St. Pat's Ballroom A&B</td>
 								 </tr>
 								 <tr>
 									 <td>12.00 - 2.00 PM</td>
-									 <td>Lunch sponsored by Centene</td>
+									 <td>Lunch sponsored by Centene Corporation</td>
 									 <td>Downstairs Atrium</td>
 								 </tr>
 								 <tr>
@@ -543,7 +548,7 @@
 								 <tr>
 									 <td>2.00 - 5.00 PM</td>
 									 <td>Rock Climbing</td>
-									 <td>Lawn</td>
+									 <td>Havener Lawn</td>
 								 </tr>
 								 <tr>
 									 <td>5.00 - 6.00 PM</td>
@@ -559,6 +564,11 @@
 									 <td>9.00 - 10.00 PM</td>
 									 <td>Cup Stacking</td>
 									 <td>Downstairs Atrium</td>
+								 </tr>
+								 <tr>
+									 <td>11.00 PM - 12.00 AM</td>
+									 <td>Reiumbursement Open House</td>
+									 <td>Staircase</td>
 								 </tr>
 							 </tbody>
 						 </table>
@@ -612,7 +622,7 @@
 									 <td>Downstairs Atrium</td>
 								 </tr>
 								 <tr>
-									 <td>1.00 PM - 1.45 PM</td>
+									 <td>1.00 PM - 2.30 PM</td>
 									 <td>Closing Ceremony</td>
 									 <td>St. Pat's Ballroom A&B</td>
 								 </tr>
