Sport radar new link

--- a/index.html
+++ b/index.html
@@ -1212,7 +1212,7 @@
 					<img src="images/jumpstart.png" />
 				</div>
 			</a>
-			<a href="http://www.sportradar.us/?utm_source=pick-hacks&utm_medium=referral&utm_campaign=hackathon" target="_blank">
+			<a href="https://developer.sportradar.com/Hackathon" target="_blank">
 				<div class="image-container sport">
 					<img src="images/sportradar.png" />
 				</div>
