--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
 				<h4>March 1 - 3, 2019 </h4>
 				<!-- <div class="timer"></div> -->
 				<a href="https://pickhacks.typeform.com/to/IKW4cm" target="_blank" class="btn btn-lg btn-default smoothScroll">APPLY</a>
+				<a href="hacker-guide.html" target="_blank" class="btn btn-lg btn-default smoothScroll">DAY OF INFO</a>
 				<!--<a href="#register" class="btn btn-lg btn-danger smoothScroll wow fadeInUp" data-wow-delay="2.3s">SPONSOR US</a>-->
 			</div>
 
