Hacker guide fixes

--- a/hacker-guide.html
+++ b/hacker-guide.html
@@ -69,7 +69,7 @@
 	<div class="container">
 		<!-- navbar header -->
 		<div class="navbar-header">
-			<a href="#intro" class="navbar-brand smoothScroll"><img class="img-responsive" src="images/pickhacks.png" /><i>PICKHACKS</i></a>
+			<a href="index.html" class="navbar-brand smoothScroll"><img class="img-responsive" src="images/pickhacks.png" /><i>PICKHACKS</i></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 	    	<span class="navbar-toggler-icon"></span>
 	  	</button>
