--- a/hacker-guide.html
+++ b/hacker-guide.html
@@ -78,6 +78,7 @@
 		<div class="collapse navbar-collapse" id="navbarNav">
  			<ul class="nav navbar-nav navbar-right">
 				<li><a href="#welcome" class="smoothScroll">Welcome!</a></li>
+				<li><a href="#slack" class="smoothScroll">Slack</a></li>
 				<li><a href="#maps" class="smoothScroll">Maps</a></li>
 				<li><a href="#schedule" class="smoothScroll">Schedule</a></li>
 				<li><a href="#ceremonies" class="smoothScroll">Ceremonies</a></li>
@@ -110,7 +111,12 @@
 		<h4>Emergency</h4>
 		<p><a href="tel:5733410378">573-341-0378</a> for S&T Police</p>
 		<h4>Useful Links</h4>
-		<p><a href="https://www.facebook.com/MSTPickHacks/">Facebook</a> (Use #PickHacks!)<br><a href="https://instagram.com/mstpickhacks">Instagram</a> (Use #PickHacks!)<br><a href="https://twitter.com/mstpickhacks">Twitter</a> (Use #PickHacks!)<br><a href="https://join.slack.com/t/pickhacks2019/shared_invite/enQtNTU2NjIxMjM1NTc0LTUzYmEzNDQ1MDhmMGIzOGE1NzBmOGFhZTI4YjMzMWMyNjUxMzkzY2MzNTIxYWFjNjNkM2M2ZDRlZDFiNWM3OTI">Slack</a><br><a href="https://static.mlh.io/docs/mlh-code-of-conduct.pdf">MLH Code of Conduct</a></p>
+		<p><a href="https://www.facebook.com/MSTPickHacks/">Facebook</a> (Use #PickHacks!)<br><a href="https://instagram.com/mstpickhacks">Instagram</a> (Use #PickHacks!)<br><a href="https://twitter.com/mstpickhacks">Twitter</a> (Use #PickHacks!)<br><br><a href="https://static.mlh.io/docs/mlh-code-of-conduct.pdf">MLH Code of Conduct</a></p>
+		<div class="section-title" id="slack">
+			<h2>Slack</h2>
+		</div>
+		<p><a href="https://join.slack.com/t/pickhacks2019/shared_invite/enQtNTU2NjIxMjM1NTc0LTUzYmEzNDQ1MDhmMGIzOGE1NzBmOGFhZTI4YjMzMWMyNjUxMzkzY2MzNTIxYWFjNjNkM2M2ZDRlZDFiNWM3OTI">Join our Slack page!</a></p>
+		<p>This will be your main form of communication with sponsors and the main way to get updates throghout the event.</p>
 		<div class="section-title" id="maps">
 			<h2>Maps</h2>
 		</div>
