--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 				<h4><a href="https://goo.gl/maps/D8yMcL9eAaN2" class="havener-link">Havener Center</a>, Missouri S&T</h4>
 				<h4>March 1 - 3, 2019 </h4>
 				<!-- <div class="timer"></div> -->
-				<a href="https://pickhacks.typeform.com/to/IKW4cm" target="_blank" class="btn btn-lg btn-default smoothScroll">APPLY</a>
+				<a href="https://pickhacks.typeform.com/to/IKW4cm" target="_blank" class="btn btn-lg btn-default smoothScroll">WAITLIST</a>
 				<a href="hacker-guide.html" target="_blank" class="btn btn-lg btn-default smoothScroll">DAY OF INFO</a>
 				<!--<a href="#register" class="btn btn-lg btn-danger smoothScroll wow fadeInUp" data-wow-delay="2.3s">SPONSOR US</a>-->
 			</div>
@@ -156,7 +156,7 @@
 		<div class="stat">
 			<div class="number">
 				<p>
-					$15000+
+					$55000+
 				</p>
 			</div>
 			<div class="word">
