--- a/hacker-guide.html
+++ b/hacker-guide.html
@@ -111,12 +111,12 @@
 		<h4>Emergency</h4>
 		<p><a href="tel:5733410378">573-341-0378</a> for S&T Police</p>
 		<h4>Useful Links</h4>
-		<p><a href="https://www.facebook.com/MSTPickHacks/">Facebook</a> (Use #PickHacks!)<br><a href="https://instagram.com/mstpickhacks">Instagram</a> (Use #PickHacks!)<br><a href="https://twitter.com/mstpickhacks">Twitter</a> (Use #PickHacks!)<br><br><a href="https://static.mlh.io/docs/mlh-code-of-conduct.pdf">MLH Code of Conduct</a></p>
+		<p><a href="https://www.facebook.com/MSTPickHacks/">Facebook</a> (Use #PickHacks !)<br><a href="https://instagram.com/mstpickhacks">Instagram</a> (Use #PickHacks !)<br><a href="https://twitter.com/mstpickhacks">Twitter</a> (Use #PickHacks !)<br><br><a href="https://static.mlh.io/docs/mlh-code-of-conduct.pdf">MLH Code of Conduct</a></p>
 		<div class="section-title" id="slack">
 			<h2>Slack</h2>
 		</div>
 		<p><a href="https://join.slack.com/t/pickhacks2019/shared_invite/enQtNTU2NjIxMjM1NTc0LTUzYmEzNDQ1MDhmMGIzOGE1NzBmOGFhZTI4YjMzMWMyNjUxMzkzY2MzNTIxYWFjNjNkM2M2ZDRlZDFiNWM3OTI">Join our Slack page!</a></p>
-		<p>This will be your main form of communication with sponsors and the main way to get updates throghout the event.</p>
+		<p>This will be your main form of communication with sponsors and the main way to get updates throughout the event.</p>
 		<div class="section-title" id="maps">
 			<h2>Maps</h2>
 		</div>
@@ -145,8 +145,8 @@
 					<li><strong>Express Scripts</strong> (Jon Joplin – Senior VP and CIO)</li>
 				</ul>
 			</li>
-			<li><strong>Keynote Speech</strong> (John Meister, CIO, Panera)</li>
-			<li><strong>Major League Hacking</strong> Presentation (Kelly Mahoney, Representative, MLH)</li>
+			<li><strong>Keynote Speech</strong> (John Meister – CIO, Panera)</li>
+			<li><strong>Major League Hacking Presentation</strong> (Kelly Mahoney – Representative, MLH)</li>
 			<li><strong>Logistics + Closing Remarks</strong> (Luis Ocampo – Co-Director, PickHacks)</li>
 		</ul>
 		<h4>Closing Ceremonies</h4>
@@ -255,9 +255,9 @@
 			<li><a href="https://www.eventbrite.com/e/pickhacks-sluwashu-tickets-56083028849">Route 2: SLU → WashU → STL Lambert Airport</a> (password: ph2019slu)</li>
 			<li><a href="https://www.eventbrite.com/e/pickhacks-purdueuiuc-tickets-56082828249">Route 3: Purdue → UIUC</a> (password: ph2019purdue)</li>
 		</ul>
-		<p>Although all reserved seats are full, we have a limited amount of walk-on seats that will be distributed first come, first served on Friday. <span style="font-weight: bolder;">Please remember that we will be requiring an $7 deposit to reserve your seat that will help us get an accurate headcount for the routes. <span style="text-decoration: underline;">This deposit will be refunded after your participation in PickHacks.</span></span></p>
+		<p>Although all reserved seats are full, we have a limited amount of walk-on seats that will be distributed first come, first serve on Friday. <span style="font-weight: bolder;">Please remember that we will be requiring a $7 deposit to reserve your seat that will help us get an accurate headcount for the routes. <span style="text-decoration: underline;">This deposit will be refunded after your participation in PickHacks.</span></span></p>
 		<h4>Reiumbursements</h4>
-		<p>Full gas reimbursements will be given out to those who drive to PickHacks outside of Rolla. Gas receipt, student ID, and proof that a project is being worked on will be required.<br><br>To claim for reimbursement, please visit the help desk from 11 PM to Midnight on Saturday, March 2, with your receipts and your Venmo username.<br><br>If you required reimbursement for another form of travel besides flight (like a public bus), please email us for approval.</p>
+		<p>Full gas reimbursements will be given out to those who drive to PickHacks outside of Rolla. Gas receipt, student ID, and proof that a project is being worked on will be required.<br><br>To claim for reimbursement, please visit the registration table from 11 PM to Midnight on Saturday, March 2, with your receipts and your Venmo username.<br><br>If you required reimbursement for another form of travel besides flight (like a public bus), please email us for approval.</p>
 		<div class="section-title" id="sleeping">
 			<h2>Sleeping & Eating</h2>
 		</div>
@@ -265,13 +265,13 @@
 		<div class="section-title" id="faqs">
 			<h2>FAQ</h2>
 		</div>
-		<p>Got a question that isn't on this list? Visit us at the help desk!<br></p>
+		<p>Got a question that isn't on this list? Visit us at the registration table!<br></p>
 		<strong>Where is registration?</strong><br>
 		<p>Registration will be at the top of the staircase. You can’t miss us!</p>
 		<strong>I came late / I don’t know where to go!</strong><br>
-		<p>Come to the Help Desk and we’ll get you up to speed!</p>
+		<p>Come to the registration table and we’ll get you up to speed!</p>
 		<strong>What if I don’t have a team?</strong><br>
-		<p>No worries! We’ll be holding a team formation event Friday morning to allow hackers who came without a team to find one. Feel free to also form spontaneous teams with new friends you meet through the Slack, Facebook group, or throughout the weekend!</p>
+		<p>No worries! We’ll be holding a team formation event Friday night to allow hackers who came without a team to find one. Feel free to also form spontaneous teams with new friends you meet through the Slack, Facebook group, or throughout the weekend!</p>
 		<strong>How many people are allowed on a team?</strong><br>
 		<p>Teams can be up to 4 people.</p>
 	</div>
