Hacker guide updates and some main page updates

--- a/index.html
+++ b/index.html
@@ -899,7 +899,7 @@
 				     					</div>
 				    						<div id="collapseEight" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingEight">
 				       						<div class="panel-body">
-				                             	<p>We'll be sending buses to the following universities: Mizzou, Truman, Purdue, SIUE, SLU, UIUC, UMSL, and WashU.<br />
+				                             	<p>We'll be sending buses to the following universities: Mizzou, Truman, Purdue, SLU, UIUC, and WashU.<br />
 																			If you do not attend or live near one of those schools, we will be evaluating reimbursement on a case by case basis. That being said, if you have any concerns or questions about travel, please email us at <a href="mailto:pickhacks@mst.edu">pickhacks@mst.edu!</a></p>
 				       						</div>
 				    						 </div>
