--- a/hacker-guide.html
+++ b/hacker-guide.html
@@ -129,6 +129,8 @@
 		<div class="section-title" id="schedule">
 			<h2>Schedule</h2>
 		</div>
+		<img src="images/ScheduleHandout.jpg">
+		<h4><a href="images/ScheduleHandout.pdf" download>Download Schedule</a></h4>
 		<div class="section-title" id="ceremonies">
 			<h2>Ceremonies</h2>
 		</div>
@@ -257,7 +259,7 @@
 		</ul>
 		<p>Although all reserved seats are full, we have a limited amount of walk-on seats that will be distributed first come, first serve on Friday. <span style="font-weight: bolder;">Please remember that we will be requiring a $7 deposit to reserve your seat that will help us get an accurate headcount for the routes. <span style="text-decoration: underline;">This deposit will be refunded after your participation in PickHacks.</span></span></p>
 		<h4>Reiumbursements</h4>
-		<p>Full gas reimbursements will be given out to those who drive to PickHacks outside of Rolla. Gas receipt, student ID, and proof that a project is being worked on will be required.<br><br>To claim for reimbursement, please visit the registration table from 11 PM to Midnight on Saturday, March 2, with your receipts and your Venmo username.<br><br>If you required reimbursement for another form of travel besides flight (like a public bus), please email us for approval.</p>
+		<p>Full gas reimbursements will be given out to those who drive to PickHacks outside of Rolla. Gas receipt, student ID, and proof that a project is being worked on will be required.<br><br>To claim for reimbursement, please visit the check-in table from 11 PM to Midnight on Saturday, March 2, with your receipts and your Venmo username.<br><br>If you required reimbursement for another form of travel besides flight (like a public bus), please email us for approval.</p>
 		<div class="section-title" id="sleeping">
 			<h2>Sleeping & Eating</h2>
 		</div>
@@ -265,11 +267,11 @@
 		<div class="section-title" id="faqs">
 			<h2>FAQ</h2>
 		</div>
-		<p>Got a question that isn't on this list? Visit us at the registration table!<br></p>
+		<p>Got a question that isn't on this list? Visit us at the check-in table!<br></p>
 		<strong>Where is registration?</strong><br>
 		<p>Registration will be at the top of the staircase. You can’t miss us!</p>
 		<strong>I came late / I don’t know where to go!</strong><br>
-		<p>Come to the registration table and we’ll get you up to speed!</p>
+		<p>Come to the check-in table and we’ll get you up to speed!</p>
 		<strong>What if I don’t have a team?</strong><br>
 		<p>No worries! We’ll be holding a team formation event Friday night to allow hackers who came without a team to find one. Feel free to also form spontaneous teams with new friends you meet through the Slack, Facebook group, or throughout the weekend!</p>
 		<strong>How many people are allowed on a team?</strong><br>
