Add tech domains link

--- a/hacker-guide.html
+++ b/hacker-guide.html
@@ -167,7 +167,7 @@
 			</li>
 			<li><strong>Jumpstart</strong> | <a href="https://jumpstart.me/r/pickhacks">Free hiring platform to find internships!</a></li>
 			<li><strong>Microsoft</strong> | <a href="https://azure.microsoft.com/en-us/free/free-account-students-faq/">Azure for Students</a></li>
-			<li><strong>.TECH domains</strong> | Free .TECH domains (info coming soon)</li>
+			<li><strong>.TECH domains</strong> | <a href="https://docs.google.com/document/d/1mGmwas27jKu67eVZVTvOASdwgYdG4ySMvLsNiXZMYYc/edit">Free .TECH domain</a></li>
 		</ul>
 		<h4>MLH Hardware Lab</h4>
 		<p>Major League Hacking will be providing various hardware to help out your hack. This list will be provided the day of the event, but you can check out a preview of their inventory <a href="https://hardware.mlh.io/">here</a>!</p>
