Musical chairs and jbl speaker

--- a/hacker-guide.html
+++ b/hacker-guide.html
@@ -219,7 +219,7 @@
 		<em>Awarded to the Top 15 projects.</em>
 		<p>Prize: Year of Wolfram|One Personal Edition plus a one-year subscription to Wolfram|Alpha Pro.</p>
 		<strong>.TECH domains</strong><br>
-		<em>Awarded to the best hack/website submitted on a .TECH domain. TBA.</em>
+		<em>Awarded to the best hack/website submitted on a .TECH domain.</em>
 		<p>Prize: $200 Amazon Gift Voucher.</p>
 		<strong>Sketch</strong><br>
 		<em>Awarded to the project with the best User Interface.</em>
@@ -237,8 +237,11 @@
 		<em>Awarded to second place winner of the Smash Tournament.</em>
 		<p>Prize: HyperX Cloud II Gaming Headset</p>
 		<strong>Limbo Champion</strong><br>
-		<em>Awarded to the attendee who can drop it the lowest.</em>
+		<em>How low can you go?</em>
 		<p>Prize: Fitbit Charge 3</p>
+		<strong>Musical Chairs Champion</strong><br>
+		<em>Yes, competitive musical chairs.</em>
+		<p>Prize: JBL Flip 4 Speaker</p>
 		<strong>Workshops / Tech Talk Raffle</strong><br>
 		<em>Awarded to a random attendee of a workshop / tech talk.</em>
 		<p>Prize: Fitbit Flex 2</p>
