Changed button on main page

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 				<h4>March 1 - 3, 2019 </h4>
 				<!-- <div class="timer"></div> -->
 			
-				
+				<a href="https://pickhacks.devpost.com/submissions" target="_blank" class="btn btn-lg btn-default smoothScroll">VIEW 2019 PROJECTS</a>
 	
 			</div>
 
