Added mailchimp form integration and made sponsors image background white

--- a/index.html
+++ b/index.html
@@ -86,17 +86,17 @@
 				<div class="intro-buttons">
 					<a href="https://www.youtube.com/watch?v=Iqnbst4-Ujw" target="_blank" class="btn btn-lg btn-default smoothScroll">Watch Recap Video</a>
 					<a href="https://pickhacks.devpost.com/submissions" target="_blank" class="btn btn-lg btn-default smoothScroll">View 2019 Submissions</a>
-					<a href="test/images/sponsors.png" target="_blank" class="btn btn-lg btn-default smoothScroll">2019 Sponsors</a>
+					<a href="test/images/sponsors.jpg" target="_blank" class="btn btn-lg btn-default smoothScroll">2019 Sponsors</a>
 				</div>
 
-				<div class="intro-form" style="display: flex; flex-wrap: wrap;">
-					<input type="text" class="btn btn-default" placeholder="Enter your email address" style="padding: 14px;
+				<form id="intro-form" action="https://pickhacks.us18.list-manage.com/subscribe/post?u=856465f72a4d3c5f8d8fb2a48&amp;id=8b600ab52a" method="post" class="intro-form" style="display: flex; flex-wrap: wrap;">
+					<input type="email" value="" name="EMAIL" class="btn btn-default" placeholder="Enter your email address" style="padding: 14px;
 					font-size: 12px; line-height: normal; margin: 0; text-align: left; margin-left: auto;">
-					<button class="btn btn-default" type="button" style="margin: 0;
+					<button form="intro-form" class="btn btn-default" type="submit" style="margin: 0;
 					width: auto;
 					background: black;
 					border: 2px solid black; margin-right: auto;">Subscribe</button>
-				</div><!-- /input-group -->
+				</form><!-- /input-group -->
 				<p style="color: white; margin-top: 1rem;">Sign up for our mailing list. No spam, we promise!</p>
 			</div>
 
