--- a/index.html
+++ b/index.html
@@ -117,11 +117,17 @@
 <script src="js/smoothscroll.js"></script>
 <!-- <script src="js/timeCounter.js"></script> -->
 <script src="js/main.js"></script> <!-- Resource jQuery -->
-<!--
+
 <script type="text/javascript">
-  var Time = "3/01/2019 16:00:00";
-  setInterval(function() { countDown(".timer", Time) }, 1000);
-</script> -->
+  window.addEventListener('resize', function() {
+		var w = window.innerWidth || document.documentElement.clientWidth || document.body.clientWidth;
+		if (w < 573) {
+			document.getElementsByName('EMAIL')[0].placeholder='Your email';
+		} else {
+			document.getElementsByName('EMAIL')[0].placeholder='Enter your email address';
+		}
+	});
+</script>
 
 </body>
 </html>
