Added footer again

--- a/index.html
+++ b/index.html
@@ -104,6 +104,21 @@
 	</div>
 </section>
 
+<footer>
+	<div class="row" style="margin: 0 2rem">
+		<div style="padding: 0 !important; display: inline-block; float: left;">
+			<a href="https://static.mlh.io/docs/mlh-code-of-conduct.pdf" style="color: white;">Code of Conduct</a>
+		</div>
+		<div style="text-align:right; margin-left: auto; float: right;">
+			<a href="https://www.facebook.com/MSTPickHacks/"><i class="fa fa-facebook-f"></i></a>
+			<a href="https://twitter.com/mstpickhacks?lang=en"><i class="fa fa-twitter"></i></a>
+			<a href="https://www.instagram.com/mstpickhacks/"><i class="fa fa-instagram"></i></a>
+			<a href="https://www.linkedin.com/company/pickhacks"><i class="fa fa-linkedin-square"></i></a>
+			<a href="mailto:pickhacks@mst.edu"><i class="fa fa-envelope"></i></a>
+		</div>
+	</div>
+</footer>
+
 
 <!-- =========================
      SCRIPTS
