--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 <footer>
 	<div class="row" style="margin: 0 2rem">
 		<div style="padding: 0 !important; display: inline-block; float: left;">
-			<a href="https://static.mlh.io/docs/mlh-code-of-conduct.pdf" style="color: white;">Code of Conduct</a>
+			<a href="https://static.mlh.io/docs/mlh-code-of-conduct.pdf" style="color: white; font-size:1rem;">Code of Conduct</a>
 		</div>
 		<div style="text-align:right; margin-left: auto; float: right;">
 			<a href="https://www.facebook.com/MSTPickHacks/"><i class="fa fa-facebook-f"></i></a>
